aula31 - finalização de layout didático responsivo e adapitavel #1

--- a/layout/index.html
+++ b/layout/index.html
@@ -15,11 +15,64 @@
                 largura: <span id="largura"></span>
                 altura: <span id="altura"></span>
             </p>
-            
+
             <p class="horizontal">Modo paissagem</p>
             <p class="vertical">Modo Retrato</p>
             <script src="js/medidas.js"></script>
-            
+
         </header>
+        <section>
+            <h1>Eleições 2014 zoada</h1>
+            <h2>Situação dos candidatos</h2>
+            <figure>
+                <img src="http://blogs.ne10.uol.com.br/jamildo/wp-content/uploads/2014/06/dilma-rousseff_presidente.jpg" alt="Dilma rouseff">
+                <figcaption><a href="http://blogs.ne10.uol.com.br/jamildo/wp-content/uploads/2014/06/dilma-rousseff_presidente.jpg">Dilma rouseff</a></figcaption>
+            </figure>
+            <figure>
+                <img src="https://lh6.googleusercontent.com/-Jo5izc9Vo5M/UUzRqw4eziI/AAAAAAAELEk/0IGbYUQi0PI/w800-h800/dilma.jpg" alt="Dilma rouseff fumando">
+                <figcaption><a href="https://lh6.googleusercontent.com/-Jo5izc9Vo5M/UUzRqw4eziI/AAAAAAAELEk/0IGbYUQi0PI/w800-h800/dilma.jpg">Dilma rouseff fumando</a></figcaption>
+            </figure>
+            <figure>
+                <img src="https://pbs.twimg.com/media/By_uhh5IAAECCX-.jpg:large" alt="Embolando basiado">
+                <figcaption><a href="https://pbs.twimg.com/media/By_uhh5IAAECCX-.jpg:large">Embolando basiado</a></figcaption>
+            </figure>
+            <figure>
+                <img src="http://www.ahnegao.com.br/wp-content/uploads/2014/08/debate6.jpg" alt="Vai paga ou não?">
+                <figcaption><a href="http://www.ahnegao.com.br/wp-content/uploads/2014/08/debate6.jpg">Vai paga ou não?</a></figcaption>
+            </figure>
+            <figure>
+                <img src="https://pbs.twimg.com/media/Bw7yn0FIgAAABiY.jpg:large" alt="Dilma dando um rolé">
+                <figcaption><a href="https://pbs.twimg.com/media/Bw7yn0FIgAAABiY.jpg:large">Dilma dando um rolé</a></figcaption>
+            </figure>
+            <figure>
+                <img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10629813_812959575427959_6539761075980394873_n.jpg?oh=e41872c4a745a2873a7791a959429a06&oe=54ECD2AD&__gda__=1425460337_29d9dcb7d3b2b90a41738fdef80bdc59" alt="Tacale pau">
+                <figcaption><a href="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10629813_812959575427959_6539761075980394873_n.jpg?oh=e41872c4a745a2873a7791a959429a06&oe=54ECD2AD&__gda__=1425460337_29d9dcb7d3b2b90a41738fdef80bdc59">Tacale pau</a></figcaption>
+            </figure>
+             <figure>
+                <img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/p235x350/1902921_298310493693746_7413986399099081645_n.jpg?oh=ad6b4f5d6a4fbfcd42224377c67889ed&oe=54F58145&__gda__=1425558380_4fd63db62a55291aa88b0486f5c0bf20" alt="PT a bomba">
+                <figcaption><a href="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/p235x350/1902921_298310493693746_7413986399099081645_n.jpg?oh=ad6b4f5d6a4fbfcd42224377c67889ed&oe=54F58145&__gda__=1425558380_4fd63db62a55291aa88b0486f5c0bf20">PT a bomba</a></figcaption>
+            </figure>
+            <figure>
+                <img src="http://blog.jornalpequeno.com.br/linhares/files/2013/08/aecio-neves.jpg" alt="Aecio neves">
+                <figcaption><a href="http://blog.jornalpequeno.com.br/linhares/files/2013/08/aecio-neves.jpg">Aecio neves</a></figcaption>
+            </figure>
+             <figure>
+                <img src="https://pbs.twimg.com/profile_images/519191151841013760/pxdDquEv_400x400.jpeg" alt=">Aecio neves na ostenta">
+                <figcaption><a href="https://pbs.twimg.com/profile_images/519191151841013760/pxdDquEv_400x400.jpeg">Aecio neves na ostenta</a></figcaption>
+            </figure>
+            <figure>
+                <img src="http://joselitomuller.files.wordpress.com/2014/08/eduardo-jorge-disse-que-nc3a3o-fumou-debate.jpg" alt="Eduardo jorge envocando">
+                <figcaption><a href="http://joselitomuller.files.wordpress.com/2014/08/eduardo-jorge-disse-que-nc3a3o-fumou-debate.jpg">Eduardo jorge envocando</a></figcaption>
+            </figure>
+            <figure>
+                <img src="http://pbs.twimg.com/media/BwBBkqaIUAAIt9A.jpg" alt="Eduardo jorge na larica">
+                <figcaption><a href="http://pbs.twimg.com/media/BwBBkqaIUAAIt9A.jpg">Eduardo jorge na larica</a></figcaption>
+            </figure>
+            <figure>
+                <img src="http://imguol.com/c/bol/fotos/2014/08/29/mais-uma-vez-o-candidato-eduardo-jorge-esteve-em-montagens-bem-humoradas-quanto-a-sua-posicao-politica-de-defender-a-legalizacao-das-drogas-1409347319968_741x414.png" alt="Eduardo jorge Chamando os parça">
+                <figcaption><a href="http://imguol.com/c/bol/fotos/2014/08/29/mais-uma-vez-o-candidato-eduardo-jorge-esteve-em-montagens-bem-humoradas-quanto-a-sua-posicao-politica-de-defender-a-legalizacao-das-drogas-1409347319968_741x414.png">Eduardo jorge Chamando os parça</a></figcaption>
+            </figure>
+            <br class="final"/>
+        </section>
     </body>
 </html>
